generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum RoleUsuario {
  ADMIN
  ASSOCIADO
}

enum StatusAtribuicao {
  ATIVO
  DEVOLVIDO
}

enum TipoPatrimonio {
  EQUIPAMENTO
  INSUMO
}

enum CategoriaInsumo {
  FERRAMENTA
  INSUMO
}

enum UnidadeMedida {
  KG
  LITRO
  UNIDADE
  GRAMA
}

enum TipoMovimentacao {
  ENTRADA
  SAIDA
}

enum TipoLote {
  PRODUCAO
  AQUISICAO
}

enum TipoVenda {
  COLETIVA
  INDIVIDUAL
}

enum TipoMovimentoFinanceiro {
  ANTECIPACAO
  RATEIO_FINAL
}

enum StatusPedido {
  PENDENTE
  CONFIRMADO
  EM_PREPARO
  ENVIADO
  ENTREGUE
  CANCELADO
}

enum CategoriaDocumento {
  ATA
  FINANCEIRO
  PRESTACAO_CONTAS
  RELATORIO
  OUTRO
}

model Usuario {
  id        String      @id @default(uuid())
  nome      String
  email     String      @unique
  role      RoleUsuario @default(ASSOCIADO)
  ativo     Boolean     @default(true)
  criadoEm DateTime    @default(now()) @map("criado_em")

  associado  Associado?
  atas       Ata[]
  documentos Documento[]

  @@map("usuarios")
}

model Associado {
  id           String   @id @default(uuid())
  usuarioId    String   @unique @map("usuario_id")
  dataIngresso DateTime @map("data_ingresso")
  observacoes  String?

  usuario               Usuario                @relation(fields: [usuarioId], references: [id])
  atribuicoesPatrimonio AtribuicaoPatrimonio[]
  colheitas             Colheita[]
  participacoesLote     ParticipacaoLote[]
  participantesAta      ParticipanteAta[]
  movimentosFinanceiros MovimentoFinanceiro[]
  vendas                Venda[]

  @@map("associados")
}

model Equipamento {
  id          String   @id @default(uuid())
  nome        String
  numeroSerie String?  @map("numero_serie")
  descricao   String?
  emUso       Boolean  @default(false) @map("em_uso")
  criadoEm    DateTime @default(now()) @map("criado_em")

  atribuicoes AtribuicaoPatrimonio[]
  colheitas   Colheita[]

  @@map("equipamentos")
}

model Insumo {
  id        String          @id @default(uuid())
  nome      String
  categoria CategoriaInsumo
  descricao String?
  emUso     Boolean         @default(false) @map("em_uso")
  criadoEm  DateTime        @default(now()) @map("criado_em")

  atribuicoes AtribuicaoPatrimonio[]

  @@map("insumos")
}

model AtribuicaoPatrimonio {
  id             String           @id @default(uuid())
  tipoPatrimonio TipoPatrimonio   @map("tipo_patrimonio")
  equipamentoId  String?          @map("equipamento_id")
  insumoId       String?          @map("insumo_id")
  associadoId    String           @map("associado_id")
  dataInicio     DateTime         @map("data_inicio")
  dataFim        DateTime?        @map("data_fim")
  status         StatusAtribuicao @default(ATIVO)
  observacao     String?

  associado   Associado    @relation(fields: [associadoId], references: [id])
  equipamento Equipamento? @relation(fields: [equipamentoId], references: [id])
  insumo      Insumo?      @relation(fields: [insumoId], references: [id])

  @@map("atribuicoes_patrimonio")
}

model TipoMateriaPrima {
  id        String        @id @default(uuid())
  nome      String        @unique
  unidade   UnidadeMedida
  descricao String?

  colheitas   Colheita[]
  estoque     EstoqueMateriaPrima?
  composicoes ComposicaoProduto[]

  @@map("tipos_materia_prima")
}

model LoteProducao {
  id         String    @id @default(uuid())
  tipo       TipoLote
  periodo    String
  dataInicio DateTime  @map("data_inicio")
  dataFim    DateTime? @map("data_fim")
  ativo      Boolean   @default(true)
  custoTotal Decimal   @default(0) @map("custo_total") @db.Decimal(10, 2)

  colheitas             Colheita[]
  participacoes         ParticipacaoLote[]
  vendas                Venda[]
  produtos              Produto[]
  movimentosFinanceiros MovimentoFinanceiro[]
  apuracao              ApuracaoLote?

  @@map("lotes_producao")
}

model ParticipacaoLote {
  id             String   @id @default(uuid())
  loteProducaoId String   @map("lote_producao_id")
  associadoId    String   @map("associado_id")
  percentual     Decimal  @db.Decimal(5, 2)
  volume         Decimal? @db.Decimal(10, 3)
  valorInvestido Decimal? @map("valor_investido") @db.Decimal(10, 2)

  lote      LoteProducao @relation(fields: [loteProducaoId], references: [id])
  associado Associado    @relation(fields: [associadoId], references: [id])

  @@unique([loteProducaoId, associadoId])
  @@map("participacoes_lote")
}

model Colheita {
  id                 String        @id @default(uuid())
  associadoId        String        @map("associado_id")
  tipoMateriaPrimaId String        @map("tipo_materia_prima_id")
  equipamentoId      String?       @map("equipamento_id")
  loteProducaoId     String        @map("lote_producao_id")
  volume             Decimal       @db.Decimal(10, 3)
  unidade            UnidadeMedida
  dataColheita       DateTime      @map("data_colheita")
  observacao         String?
  criadoEm           DateTime      @default(now()) @map("criado_em")

  associado        Associado        @relation(fields: [associadoId], references: [id])
  tipoMateriaPrima TipoMateriaPrima @relation(fields: [tipoMateriaPrimaId], references: [id])
  equipamento      Equipamento?     @relation(fields: [equipamentoId], references: [id])
  lote             LoteProducao     @relation(fields: [loteProducaoId], references: [id])

  @@map("colheitas")
}

model EstoqueMateriaPrima {
  id                   String        @id @default(uuid())
  tipoMateriaPrimaId   String        @unique @map("tipo_materia_prima_id")
  quantidadeDisponivel Decimal       @map("quantidade_disponivel") @db.Decimal(10, 3)
  unidade              UnidadeMedida
  atualizadoEm         DateTime      @updatedAt @map("atualizado_em")

  tipoMateriaPrima TipoMateriaPrima     @relation(fields: [tipoMateriaPrimaId], references: [id])
  movimentacoes    MovimentacaoEstoque[]

  @@map("estoque_materia_prima")
}

model MovimentacaoEstoque {
  id           String           @id @default(uuid())
  estoqueId    String           @map("estoque_id")
  tipo         TipoMovimentacao
  quantidade   Decimal          @db.Decimal(10, 3)
  referenciaId String           @map("referencia_id")
  criadoEm     DateTime         @default(now()) @map("criado_em")

  estoque EstoqueMateriaPrima @relation(fields: [estoqueId], references: [id])

  @@map("movimentacoes_estoque")
}

model Produto {
  id           String   @id @default(uuid())
  nome         String
  slug         String   @unique
  descricao    String
  preco        Decimal  @db.Decimal(10, 2)
  imagemUrl    String?  @map("imagem_url")
  ativo        Boolean  @default(true)
  loteOrigemId String?  @map("lote_origem_id")
  criadoEm     DateTime @default(now()) @map("criado_em")

  loteOrigem  LoteProducao?      @relation(fields: [loteOrigemId], references: [id])
  estoque     EstoqueProduto?
  composicoes ComposicaoProduto[]
  itensPedido ItemPedido[]

  @@map("produtos")
}

model EstoqueProduto {
  id                   String   @id @default(uuid())
  produtoId            String   @unique @map("produto_id")
  quantidadeDisponivel Int      @default(0) @map("quantidade_disponivel")
  atualizadoEm         DateTime @updatedAt @map("atualizado_em")

  produto Produto @relation(fields: [produtoId], references: [id])

  @@map("estoque_produtos")
}

model ComposicaoProduto {
  id                   String        @id @default(uuid())
  produtoId            String        @map("produto_id")
  tipoMateriaPrimaId   String        @map("tipo_materia_prima_id")
  quantidadeNecessaria Decimal       @map("quantidade_necessaria") @db.Decimal(10, 3)
  unidade              UnidadeMedida

  produto          Produto          @relation(fields: [produtoId], references: [id])
  tipoMateriaPrima TipoMateriaPrima @relation(fields: [tipoMateriaPrimaId], references: [id])

  @@unique([produtoId, tipoMateriaPrimaId])
  @@map("composicoes_produto")
}

model Pedido {
  id              String       @id @default(uuid())
  clienteNome     String       @map("cliente_nome")
  clienteEmail    String       @map("cliente_email")
  clienteTelefone String?      @map("cliente_telefone")
  status          StatusPedido @default(PENDENTE)
  total           Decimal      @db.Decimal(10, 2)
  criadoEm        DateTime     @default(now()) @map("criado_em")
  atualizadoEm    DateTime     @updatedAt @map("atualizado_em")

  itens ItemPedido[]

  @@map("pedidos")
}

model ItemPedido {
  id            String  @id @default(uuid())
  pedidoId      String  @map("pedido_id")
  produtoId     String  @map("produto_id")
  quantidade    Int
  precoUnitario Decimal @map("preco_unitario") @db.Decimal(10, 2)

  pedido  Pedido  @relation(fields: [pedidoId], references: [id])
  produto Produto @relation(fields: [produtoId], references: [id])

  @@map("itens_pedido")
}

model Venda {
  id             String    @id @default(uuid())
  loteProducaoId String    @map("lote_producao_id")
  associadoId    String?   @map("associado_id")
  tipo           TipoVenda
  volume         Decimal   @db.Decimal(10, 3)
  valor          Decimal   @db.Decimal(10, 2)
  data           DateTime  @default(now())

  lote      LoteProducao @relation(fields: [loteProducaoId], references: [id])
  associado Associado?   @relation(fields: [associadoId], references: [id])

  @@map("vendas")
}

model MovimentoFinanceiro {
  id             String                  @id @default(uuid())
  associadoId    String                  @map("associado_id")
  loteProducaoId String                  @map("lote_producao_id")
  valor          Decimal                 @db.Decimal(10, 2)
  tipo           TipoMovimentoFinanceiro
  data           DateTime                @default(now())

  associado Associado    @relation(fields: [associadoId], references: [id])
  lote      LoteProducao @relation(fields: [loteProducaoId], references: [id])

  @@map("movimentos_financeiros")
}

model ApuracaoLote {
  id               String   @id @default(uuid())
  loteProducaoId   String   @unique @map("lote_producao_id")
  faturamentoTotal Decimal  @map("faturamento_total") @db.Decimal(10, 2)
  fechadoEm        DateTime @default(now()) @map("fechado_em")

  lote LoteProducao @relation(fields: [loteProducaoId], references: [id])

  @@map("apuracoes_lote")
}

model Ata {
  id          String   @id @default(uuid())
  titulo      String
  conteudo    String
  autorId     String   @map("autor_id")
  dataReuniao DateTime @map("data_reuniao")
  publicada   Boolean  @default(false)
  criadoEm    DateTime @default(now()) @map("criado_em")

  autor         Usuario           @relation(fields: [autorId], references: [id])
  participantes ParticipanteAta[]

  @@map("atas")
}

model ParticipanteAta {
  id          String @id @default(uuid())
  ataId       String @map("ata_id")
  associadoId String @map("associado_id")

  ata       Ata       @relation(fields: [ataId], references: [id])
  associado Associado @relation(fields: [associadoId], references: [id])

  @@unique([ataId, associadoId])
  @@map("participantes_ata")
}

model Documento {
  id           String             @id @default(uuid())
  titulo       String
  categoria    CategoriaDocumento
  arquivoUrl   String             @map("arquivo_url")
  tamanhoBytes Int                @map("tamanho_bytes")
  publicado    Boolean            @default(false)
  autorId      String             @map("autor_id")
  criadoEm     DateTime           @default(now()) @map("criado_em")

  autor Usuario @relation(fields: [autorId], references: [id])

  @@map("documentos")
}

model ConfiguracaoAssociacao {
  id           String   @id @default(uuid())
  nomeExibido  String   @map("nome_exibido")
  cnpj         String?
  email        String?
  telefone     String?
  endereco     String?
  atualizadoEm DateTime @updatedAt @map("atualizado_em")

  @@map("configuracao_associacao")
}

model RelatorioProducao {
  id         String   @id @default(uuid())
  dataInicio DateTime @map("data_inicio")
  dataFim    DateTime @map("data_fim")
  geradoEm   DateTime @default(now()) @map("gerado_em")

  @@map("relatorios_producao")
}
